# phytest

./: .buildinfo  .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.rst  autodocs.sh  development.html  examples.html  genindex.html  index.html  installation.html  mkdocs.sh  objects.inv  pyproject.toml  quickstart.html  reference.html  search.html  searchindex.js  testFiles.html  usage.html
.doctrees/: development.doctree  environment.pickle  examples.doctree  index.doctree  installation.doctree  quickstart.doctree  reference.doctree  testFiles.doctree  usage.doctree
.github/workflows/: coverage.yml  docs.yml  ice_virus_example.yml  publish.yml  tests.yml
_sources/: development.rst.txt  index.rst.txt  installation.rst.txt  testFiles.rst.txt  usage.rst.txt
coverage/: index.html  phytest___init___py.html  phytest_alignments_py.html  phytest_asserts___init___py.html  phytest_asserts_alignments_py.html  phytest_asserts_sequences_py.html  phytest_asserts_trees_py.html  phytest_bio___init___py.html  phytest_bio_alignment_py.html  phytest_bio_data_py.html  phytest_bio_sequence_py.html  phytest_bio_tree_py.html  phytest_cli_py.html  phytest_conftest_py.html  phytest_helpers___init___py.html  phytest_helpers_alignments_py.html  phytest_helpers_sequences_py.html  phytest_helpers_trees_py.html  phytest_main_py.html  phytest_trees_py.html  phytest_utils_py.html  status.json
docs/: conf.py  development.rst  examples.rst  index.rst  quickstart.rst  reference.rst  testFiles.rst
examples/: alignments.py  basic.py  example.py  ice_viruses.py  self_contained.py
examples/data/: example.csv  example.fasta  example.tree  example.tsv  example.xlsx  ice_viruses.fasta  ice_viruses.fasta.treefile  ice_viruses_cleaned.fasta  ice_viruses_cleaned.fasta.treefile  invalid.fasta
phypytest/: cli.py  pytest.ini
phypytest/alignments/: conftest.py  test_alignments.py
phytest/: __init__.py  alignments.py  cli.py  main.py  utils.py
phytest/asserts/: alignments.py  sequences.py
phytest/bio/: __init__.py  alignment.py  data.py  sequence.py  tree.py
phytest/helpers/: alignments.py  sequences.py  trees.py
phytest/report/: logo.css
tests/: __init__.py  test_alignments.py  test_cli.py  test_data.py  test_main.py  test_self_contained.py  test_sequences.py  test_trees.py
tests/input/: alignment.py  basic.py  self_contained.py
