[tool.poetry]
name = "phytest"
version = "0.1.8"
description = "Quality control for phylogenetic pipelines using pytest"
authors = ["Wytamma Wirth <wytamma.wirth@me.com>", "Simon Mutch <smutch@unimelb.edu.au>", "Rob Turnbull <robert.turnbull@unimelb.edu.au>"]
readme = "README.rst"

[tool.poetry.scripts]
phytest = "phytest.cli:app"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pytest = "^7.1.1"
pytest-sugar = "^0.9.4"
pytest-html = "^3.1.1"
typer = "^0.4.1"
biopython = "^1.79"
phylo-treetime = "^0.8.6"
scipy = "^1.8.0"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
coverage = "^5.5"
Sphinx = "^4.2.0"
nbsphinx = "^0.8.7"
sphinx-rtd-theme = "^1.0.0"
sphinx-autobuild = "^2021.3.14"
myst-parser = "^0.15.2"
pre-commit = "^2.15.0"
sphinx-copybutton = "^0.4.0"
typing-extensions = "^4.1.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
skip_string_normalization = true

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "120"
